src/SearchEngine.css
.form-inline {
margin-bottom: 20px;
}


.searchbtn {
margin-left:10px;
background-color: #ebd4d4;
border-color:#ebd4d4;;
box-shadow: 5px 8px #888888;
border-top-right-radius:30px;
border-bottom-right-radius:30px;
}

.searchbtn:focus,  .searchbtn:hover, .searchbtn:active:focus {
 box-shadow: 5px 8px #888888;
}

.form-control {
box-shadow: 5px 8px #888888;
border-radius: 30px;

}
.form-control:focus {
box-shadow: 5px 10px #888888;
}

h1, h2 {
font-family: monospace;
font-size: 26px;
margin-bottom: 10px;
margin-top: 10px;
}

h2, h3 {
text-align: left;
margin-left: 35px;}

form {
padding-left: 20px;
padding-right:20px;}

.weather-icon{
max-width: 170px;
margin-left: 20px;
}

.degree {
font-family: monospace;
font-size: 60px;
text-align: left;
}

.celsius-far-far, .celsius-far-cel, .small {
font-size: 15px;
top: -25px;
position: relative;
}

.celsius-far-far {
margin-left:3px;
cursor: pointer;
}

.far {
margin-left:12px;
}

.celsius-far-cel{
margin-left:-25px;
cursor: pointer;
}

.celsius-far-cel, .celsius-far-far {
color: dimgray;
}

.link {
  color: #d9adad;
  cursor: pointer;
text-decoration: line-through;

}


.results {
margin-top: 20px;
font-size: 18px;
text-align: left;
list-style: none;
}

